--- a/src/Server/LazyWelfare.ServerWeb/Views/Shared/_Layout.cshtml
+++ b/src/Server/LazyWelfare.ServerWeb/Views/Shared/_Layout.cshtml
@@ -7,13 +7,13 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/style.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/style.min.css" asp-append-version="true" />
     </environment>
 </head>
 <body>
@@ -33,7 +33,34 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="UITest" asp-action="Index">UITest</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span> UITest</span>
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a asp-controller="UITest" asp-action="Index" asp-fragment="List" class=".fragmentLink"> List(列表)  </a>
+                            </li>
+                            <li>
+                                <a asp-controller="UITest" asp-action="Index" asp-fragment="Form" class=".fragmentLink">Form(表单)</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span>Interface-Page</span>
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a asp-controller="Page" asp-action="Index" asp-fragment="CommandPanel" class=".fragmentLink"> CommandPanel(指令列表)  </a>
+                            </li>
+                            <li>
+                                <a asp-controller="Page" asp-action="Index" asp-fragment="CommandPanel" class=".fragmentLink">Form(表单)</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
