--- a/src/Server/LazyWelfare.ServerWeb/Views/UITest/List.cshtml
+++ b/src/Server/LazyWelfare.ServerWeb/Views/UITest/List.cshtml
@@ -1,12 +1,20 @@
-﻿
+﻿@{
+    Layout = null;
+}
+
 
 <div class="line-section">
     <ul class="list-group">
         <li class="list-group-item">
-            <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>音量调节
+            <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>
+            <span>音量调节</span>
         </li>
-        <li class="list-group-item">放大</li>
-        <li class="list-group-item">缩小</li>
+        <li class="list-group-item">
+            <span>放大</span>
+        </li>
+        <li class="list-group-item">
+            <span>缩小</span>
+        </li>
     </ul>
 </div>
 
@@ -26,7 +34,7 @@
             <span class="orangered">设置</span><span class="red">删除</span><span class="blue">编辑</span>
             <span class="red">睡眠</span><span class="orangered">关机</span>
         </li>
-  
+
         <li class="list-group-item main-item">
             <span class="glyphicon  glyphicon-tags" aria-hidden="true"></span>  <span>操作命令</span>
         </li>
@@ -91,5 +99,5 @@
             $(this).next().fadeToggle();
         });
     });
-      
+
 </script>
