--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
@@ -4,10 +4,13 @@
             @foreach (var one in Model)
             {
                 <li class="list-group-item main-item">
-                    <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>@one.Name
+                    <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+                    <span>@one.Name</span>
                 </li>
                 <li class="list-group-item command-item " data-guid="@one.Domain">
-                    <span class="command-item-set orangered">设置</span><span class="command-item-delete red">删除</span><span class="command-item-eidt blue">编辑</span>
+                    <span class="command-item-set orangered">设置</span>
+                    <span class="command-item-delete red">删除</span>
+                    <span class="command-item-eidt blue">编辑</span>
                 </li>
             }
         </ul>
@@ -16,10 +19,12 @@
     <div class="line-section">
         <ul class="list-group">
             <li class="list-group-item command-item-add">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>手动添加
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                <span>手动添加</span>
             </li>
             <li  class="list-group-item command-item-scan" data-hybrid="servicehost">
-                <span class="glyphicon   glyphicon-qrcode" aria-hidden="true"></span> 扫一扫
+                <span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>
+                <span>扫一扫</span>
             </li>
         </ul>
     </div>
