--- a/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/Loading.axml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/Loading.axml
@@ -1,51 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mask_layout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <LinearLayout
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_gravity="center_horizontal"
-            android:background="#f0f0f0"
-            android:layout_centerInParent="true"
-            android:orientation="vertical">
-        <!--android:background="@drawable/shape_dialog_bg"-->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-            <!--<android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/pb_load"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
-                    app:srcCompat="@drawable/loading_gears_animated" />-->
-            <!--<ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:id="@+id/pb_load"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:layout_centerInParent="true"
-                            app:srcCompat="@drawable/loading_gears_animated" />-->
-                <ProgressBar
-                    android:id="@+id/pb_load"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:indeterminateDrawable="@drawable/pretty_girl"
-                    android:layout_centerInParent="true" />
-            </RelativeLayout>
-            <TextView
-                android:id="@+id/tv_load_dialog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="加载中..."
-                android:textColor="#9a9b98"
-                android:textSize="12sp" />
-        </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <app.dinus.com.loadingdrawable.LoadingView
+            android:id="@+id/collision_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#ffe9e4d1"
+            app:loading_renderer="CollisionLoadingRenderer" />
+        <app.dinus.com.loadingdrawable.LoadingView
+            android:id="@+id/swap_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#ff9c0000"
+            app:loading_renderer="SwapLoadingRenderer" />
     </LinearLayout>
-</FrameLayout>
+</LinearLayout>
