--- a/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/Loading.axml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/Loading.axml
@@ -9,19 +9,12 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
-        <app.dinus.com.loadingdrawable.LoadingView
+        <LazyWelfare.AndroidMobile.Loading.LoadingView
             android:id="@+id/collision_view"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#ffe9e4d1"
             app:loading_renderer="CollisionLoadingRenderer" />
-        <app.dinus.com.loadingdrawable.LoadingView
-            android:id="@+id/swap_view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#ff9c0000"
-            app:loading_renderer="SwapLoadingRenderer" />
     </LinearLayout>
 </LinearLayout>
