--- a/src/Mobile/LazyWelfare.AndroidAreaView/Resources/layout/ImageCtrl.axml
+++ b/src/Mobile/LazyWelfare.AndroidAreaView/Resources/layout/ImageCtrl.axml
@@ -31,19 +31,9 @@
         android:padding="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <ImageView
+        <LazyWelfare.AndroidAreaView.Core.AreaImageView
             android:id="@+id/imageCtrl"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/offered_vol" />
-        <Button
-            android:id="@+id/imageCtrl_Exit_btn"
-            android:layout_marginTop="100dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="离开"
-            android:background="@drawable/shape_button" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 </LinearLayout>
