--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HomeView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HomeView.cshtml
@@ -17,7 +17,7 @@
 {
     <script>
         $(function () {
-            ViewScript.RequestPartial('#servicehost', "Replace", '@HostMainView.Partial.Host', '@HostMainView.Partial.Path','@Model.Domain');
+            ViewScript.RequestPartial('#servicehost', "Replace", '@HostFacultyView.Partial.Host', '@HostFacultyView.Partial.Path','@Model.Domain');
         })
     </script>
 }
