--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
@@ -13,12 +13,12 @@
         <span class="command-item-button orangered ">关机</span>
         <span class="command-item-button red">睡眠</span>
     </li>
-    <li class="list-group-item main-command-item">
+    <li class="list-group-item main-command-item" data-Service="IVolumeController">
         <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
         <span>音量调节</span>
     </li>
 
-    @HostMainView.Placeholder_Append
+    @HostFacultyView.Placeholder_Append
 
 </ul>
 <script>
