--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostFacultyView.cshtml
@@ -6,12 +6,12 @@
         <span>@Model.Name</span>
     </li>
     <li class="list-group-item main-item">
-        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-off" aria-hidden="true" data-service="IComputerCloseFire"></span>
         <span>开关</span>
     </li>
-    <li class="list-group-item command-item">
-        <span class="command-item-button orangered ">关机</span>
-        <span class="command-item-button red">睡眠</span>
+    <li class="list-group-item command-item" >
+        <span class="command-item-button orangered "  >关机</span>
+        <span class="command-item-button red"  >睡眠</span>
     </li>
     <li class="list-group-item main-command-item" data-service="IVolumeController">
         <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
