--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/LayoutView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/LayoutView.cshtml
@@ -1,4 +1,6 @@
-﻿@model  LazyWelfare.AndroidMobile.Models.AppModel
+﻿@using LazyWelfare.AndroidMobile.Views.Partials
+@model  LazyWelfare.AndroidMobile.Models.AppModel
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -18,76 +20,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">@Model.Header</a>
+            <a class="navbar-brand"   href="javascript:void(0);" >@Model.Header</a>
         </div>
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
             <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="#">
-                        Link
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">Link</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">Action</a>
-                        </li>
-                        <li>
-                            <a href="#">Another action</a>
-                        </li>
-                        <li>
-                            <a href="#">Something else here</a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a href="#">Separated link</a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a href="#">One more separated link</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#">Link</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">Action</a>
-                        </li>
-                        <li>
-                            <a href="#">Another action</a>
-                        </li>
-                        <li>
-                            <a href="#">Something else here</a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a href="#">Separated link</a>
-                        </li>
-                    </ul>
-                </li>
+                <li class="menuLink hostPage"> 主机遥控  </li>
+                <li class="menuLink forderPage"> 文件归档  </li>
             </ul>
         </div>
     </div>
@@ -96,6 +34,25 @@
     <script src="jquery.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
     <script src="site.min.js"></script>
+    <script>
+        $(function () {
+            
+            $(".hostPage").click(function () {
+                changeMenu(this, '@HomeView.Partial.Host', '@HomeView.Partial.Path');
+            });
 
+            $(".forderPage").click(function () {
+                changeMenu(this, '@FoldersView.Partial.Host', '@FoldersView.Partial.Path');
+            });
+        })
+
+        function changeMenu(menu,host,page)
+        {
+            $(".menuLink").removeClass("active");
+            $(menu).addClass("active");
+            ViewScript.RequestPartial('#MainContent', "Replace", host, page,null);
+        }
+
+    </script>
 </body>
 </html>
