--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/LayoutView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/LayoutView.cshtml
@@ -42,7 +42,7 @@
             });
 
             $(".forderPage").click(function () {
-                changeMenu(this, '@FoldersView.Partial.Host', '@FoldersView.Partial.Path');
+                changeMenu(this, '@FolderMapsView.Partial.Host', '@FolderMapsView.Partial.Path');
             });
         })
 
