--- a/src/Mobile/LazyWelfare.AndroidMobile/Assets/css/style.css
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Assets/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: #C4C4C4;
+    /*background-color: #C4C4C4;*/
     /*background-image: url("../images/33f5a319ebc4b74532a0bbd2c4fc1e178b821559.jpg");*/
     background-position: center 0;
     background-repeat: no-repeat;
