--- a/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/ZxingOverlay.axml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/ZxingOverlay.axml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
     <include
-        layout="@layout/App_IncludeTop"
+        layout="@layout/App_IncludeTop_SubView"
         android:layout_height="?android:attr/actionBarSize"
         android:layout_width="match_parent"
         android:background="@color/transparent"
