--- a/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuContent_item.axml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuContent_item.axml
@@ -3,18 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingTop="20dp"
-    android:paddingBottom="20dp"
-    android:gravity="center">
+    android:paddingLeft="20dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
     <ImageView
         android:id="@+id/item_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingRight="5dp"
         android:src="@drawable/ic_launcher" />
     <TextView
         android:id="@+id/item_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="aa"
         android:textSize="20dp" />
 </LinearLayout>
