--- a/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuLayout.axml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuLayout.axml
@@ -8,50 +8,28 @@
     android:layout_height="match_parent">
 <!--主布局-->
     <LinearLayout
-        android:id="@+id/iv_main"
+        android:id="@+id/MenuMainPanel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/iv_main_Background"
+        android:background="@color/MenuMainPanel_Background"
         android:orientation="vertical">
         <include
-            layout="@layout/App_IncludeTop"
+            layout="@layout/MenuIncludeTop"
             android:layout_height="?android:attr/actionBarSize"
             android:layout_width="match_parent"
-            android:background="@color/iv_main_ToolBar"
-            android:id="@+id/toolBar" />
+            android:background="@color/MenuMainPanel_ToolBar_Background"
+            android:id="@+id/MenuToolBar" />
     </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/left"
+    <include
+        layout="@layout/MenuLeftContent"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="@android:color/white">
-        <ListView
-            android:id="@+id/left_listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/right"
+        android:id="@+id/MenuLeftContent" />
+    <include
+        layout="@layout/MenuRightContent"
         android:layout_width="260dp"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:background="#BCEE68">
-        <ImageView
-            android:id="@+id/p_pic"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_launcher_round" />
-        <TextView
-            android:id="@+id/right_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_below="@id/p_pic"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="12dp"
-            android:text="个人中心"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
-    </RelativeLayout>
+        android:id="@+id/MenuRightContent" />
 </android.support.v4.widget.DrawerLayout>
