--- a/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuLeftContent.axml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Resources/layout/MenuLeftContent.axml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:background="@android:color/white">
     <LinearLayout
+        android:id="@+id/MenuLeft_TopLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="30dp"
